--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -31,6 +31,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   @extend %default-font;
+  font-size: 15px;
   background-color: $main-bg;
   height: 100%;
   -webkit-text-size-adjust: none; /* Never autoresize text */
@@ -364,11 +365,15 @@ html, body {
   h2 {
     @extend %header-font;
     font-size: 19px;
-    margin-top: 4em;
-    margin-bottom: 0;
-    border-top: 1px solid #ccc;
-    padding-top: 1.2em;
-    padding-bottom: 1.2em;
+
+    padding-top: 2.5em;
+
+	margin-left: $main-padding;
+	padding-left: 0;
+
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid #ddd;
+
     background-image: linear-gradient(to bottom, rgba(#fff, 0.2), rgba(#fff, 0));
   }
 
@@ -386,8 +391,15 @@ html, body {
     margin-bottom: 0.8em;
   }
 
-  h4, h5, h6 {
+  h5, h6 {
     font-size: 10px;
+  }
+
+  h4 {
+	  font-size: 12px;
+	  font-weight: normal;
+	  color: #aaa;
+	  margin-top: -0.5em;
   }
 
   hr {
@@ -399,36 +411,29 @@ html, body {
   table {
     margin-bottom: 1em;
     overflow: auto;
-    th,td {
+
+    th, td {
       text-align: left;
       vertical-align: top;
+	  padding: 4px 16px;
       line-height: 1.6;
       code {
         white-space: nowrap;
       }
     }
 
+	thead {
+		background-color: lighten($main-bg, 2%);
+	}
+
+    tr {
+      border: 1px solid #ccc;
+    }
+
     th {
-      padding: 5px 10px;
-      border-bottom: 1px solid #ccc;
       vertical-align: bottom;
     }
 
-    td {
-      padding: 10px;
-    }
-
-    tr:last-child {
-      border-bottom: 1px solid #ccc;
-    }
-
-    tr:nth-child(odd)>td {
-      background-color: lighten($main-bg,4.2%);
-    }
-
-    tr:nth-child(even)>td {
-      background-color: lighten($main-bg,2.4%);
-    }
   }
 
   dt {
@@ -462,8 +467,11 @@ html, body {
   }
 
   aside {
+	max-width: 50em;
     padding-top: 1em;
     padding-bottom: 1em;
+	margin-left: $main-padding;
+	padding-left: 1em;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
     background: $aside-notice-bg;
@@ -494,6 +502,15 @@ html, body {
 
   aside.success:before {
     @extend %icon-ok-sign;
+  }
+
+  .http-get {
+	  background-color: #00f;
+	  padding: 5px 10px;
+	  border-radius: 6px;
+	  margin-right: 1em;
+	  color: #fff;
+	  font-size: 16px;
   }
 
   .search-highlight {
@@ -606,15 +623,19 @@ html, body {
   }
 }
 
-.highlight .c, .highlight .cm, .highlight .c1, .highlight .cs {
-  color: #909090;
-}
-
 .highlight, .highlight .w {
   background-color: $code-bg;
 }
 
+/* punctuations */
 .highlight .p  { color: #d0d4d7; }
+
+/* strings */
 .highlight .s2 { color: #c1ef65; }
+
+/* numbers */
 .highlight .mi { color: #77bcd7; }
+
+/* comments */
+.highlight .c1 { color: #909090; }
 
