--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -66,7 +66,7 @@ $code-annotation-text: $EXAMPLES_FG             !default;
 
 $lang-select-bg:     hsl(120,  10%,  45%) !default;
 $lang-select-text:   hsl(  0,   0%, 100%) !default;
-$lang-select-border: $examples-bg         !default;
+$lang-select-border: hsl(  0,   0%,   0%) !default;
 
 $lang-select-active-bg:   #000000 !default;
 $lang-select-active-text: $lang-select-text !default;
