--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -1,68 +1,64 @@
-/*
-Copyright 2008-2013 Concur Technologies, Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License"); you may
-not use this file except in compliance with the License. You may obtain
-a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-License for the specific language governing permissions and limitations
-under the License.
-*/
-
 
 ////////////////////////////////////////////////////////////////////////////////
-// CUSTOMIZE SLATE
+//
+// CONSTANTS
+//
 ////////////////////////////////////////////////////////////////////////////////
 
 $NAV_BG: hsl(  0,   0%, 97%);
 $NAV_FG: hsl(202,   5%, 45%);
 $NAV_HI: hsl(202, 100%, 55%);
 
-$MAIN_BG: hsl( 60, 10%, 95%);
+$MAIN_BG: hsl(202, 10%, 95%);
 $MAIN_FG: hsl(  0,  0%, 20%);
 
 $EXAMPLES_BG: hsl(202,  17%,  20%);
 $EXAMPLES_FG: hsl(  0,   0%,  80%);
 
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // NAV
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
 $nav-bg:                 $NAV_BG !default;
 $nav-text:               $NAV_FG !default;
 
-$nav-active-bg:          $nav-bg   !default;
-$nav-active-text:        $NAV_HI !default;
+$nav-active-bg:          $NAV_HI !default;
+$nav-active-text:        hsl(  0,   0%, 100%) !default;
 
-$nav-subitem-bg:         $nav-bg !default;
+$nav-subitem-bg:         hsl(202, 100%,  90%) !default;
 
-$nav-active-parent-bg:   $nav-active-text !default;
-$nav-active-parent-text: $nav-active-bg   !default;
+$nav-active-parent-bg:   $nav-bg   !default;
+$nav-active-parent-text: $nav-text !default;
 
-////////////////////
+$nav-footer-border-color: #666 !default;
+
+////////////////////////////////////////////////////////////////////////////////
+//
 // MAIN
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
 $main-bg:   $MAIN_BG !default;
 $main-text: $MAIN_FG !default;
 
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // EXAMPLES
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
 $examples-bg:          $EXAMPLES_BG             !default;
 $code-bg:              darken($examples-bg, 3%) !default;
 $code-annotation-bg:   $examples-bg             !default;
 $code-annotation-text: $EXAMPLES_FG             !default;
 
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // LANG SELET
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
 $lang-select-bg:     hsl(120,  10%,  45%) !default;
 $lang-select-text:   hsl(  0,   0%, 100%) !default;
@@ -106,39 +102,43 @@ $tablet-width: 930px !default; // min width before reverting to tablet size
 $phone-width: $tablet-width - $nav-width !default; // min width before reverting to mobile size
 
 
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // FONTS
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
 
 %default-font {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
+  font-family: "Montserrat", "Helvetiva Neue", "Helvetica", sans-serif;
+  font-size: 17px;
 }
 
 %header-font {
   @extend %default-font;
+  font-family: "Palatino", "Helvetica Neue", "Helvetica", sans-serif;
   font-weight: bold;
 }
 
+
 %code-font {
-  font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
-  font-size: 14px;
-  line-height: 1.5;
+  font-family: "Source Code Pro", monospace;
+  font-size: 15px;
 }
 
 ////////////////////
 // OTHER
 ////////////////////
 
-$nav-footer-border-color: #666 !default;
 $search-box-border-color: #666 !default;
 
-
 ////////////////////////////////////////////////////////////////////////////////
+//
 // INTERNAL
+//
 ////////////////////////////////////////////////////////////////////////////////
-
-// These settings are probably best left alone.
 
 %break-words {
     word-break: break-all;
