--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -2,23 +2,6 @@
 @import 'normalize';
 @import 'variables';
 @import 'icon-font';
-// @import 'rtl'; // uncomment to switch to RTL format
-
-/*
-Copyright 2008-2013 Concur Technologies, Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License"); you may
-not use this file except in compliance with the License. You may obtain
-a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-License for the specific language governing permissions and limitations
-under the License.
-*/
 
 //
 // GENERAL STUFF
@@ -28,10 +11,9 @@ html, body {
   color: $main-text;
   padding: 0;
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  X-webkit-font-smoothing: antialiased;
+  X-moz-osx-font-smoothing: grayscale;
   @extend %default-font;
-  font-size: 15px;
   background-color: $main-bg;
   height: 100%;
   -webkit-text-size-adjust: none; /* Never autoresize text */
@@ -349,7 +331,7 @@ html, body {
   }
 
   h1 {
-    font-size: 25px;
+    font-size: 26px;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     margin-bottom: $h1-margin-bottom;
@@ -372,7 +354,7 @@ html, body {
 
   // h2's are main sub-topics
   h2 {
-    font-size: 19px;
+    font-size: 22px;
 
     margin-left: $main-padding;
     padding-left: 0;
@@ -386,7 +368,7 @@ html, body {
 
   // h3's are parameters
   h3 {
-    font-size: 15px;
+    font-size: 18px;
 
     margin-left: $main-padding;
     padding-left: 0;
@@ -408,9 +390,9 @@ html, body {
   }
 
   h4 {
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 450;
-    color: #999;
+    color: #888;
 
     margin-bottom: 0.5em;
   }
@@ -466,8 +448,8 @@ html, body {
 
   code {
     background-color: rgba(0, 0, 0, 0.07);
-    padding: 3px 6px;
-    border-radius: 4px;
+    padding: 2px 4px;
+    border-radius: 3px;
     @extend %break-words;
     @extend %code-font;
   }
@@ -475,6 +457,7 @@ html, body {
   pre>code {
     background-color: transparent;
     padding: 0;
+	font-size: 13px;
   }
 
   aside {
@@ -597,7 +580,7 @@ html, body {
   blockquote {
     &>p {
       background-color: $code-annotation-bg;
-      padding: $code-annotation-padding 2em;
+      padding: $code-annotation-padding 1em;
       color: $code-annotation-text;
     }
   }
