--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -647,19 +647,6 @@ html, body {
 // SYNTAX HIGHLIGHTING
 //
 
-.highlight, .highlight .w {
-  background-color: $code-bg;
-}
+@import 'pygments-hopscotch.css';
 
-/* punctuations */
-.highlight .p  { color: #d0d4d7; }
-
-/* strings */
-.highlight .s2 { color: #c1ef65; }
-
-/* numbers */
-.highlight .mi { color: #77bcd7; }
-
-/* comments */
-.highlight .c1 { color: #909090; }
-
+.highlight.language-json .err { background-color: inherit; color: #909090; } // json "errors" are really my comments
