--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,26 +31,26 @@ under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title><%= current_page.data.title || "API Documentation" %></title>
 
-    <style>
-      <%= Rouge::Themes::MonokaiSublime.render(:scope => '.XXX-highlight') %>
-    </style>
     <%= stylesheet_link_tag :screen, media: :screen %>
-    <% if current_page.data.search %>
-      <%= javascript_include_tag  "all" %>
-    <% else %>
-      <%= javascript_include_tag  "all_nosearch" %>
-    <% end %>
+    <%= javascript_include_tag  "all_nosearch" %>
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
+
+    <%# =========================================== %>
+
     <a href="#" id="nav-button">
       <span>
         NAV
         <%= image_tag('navbar.png') %>
       </span>
     </a>
+
+    <%# =========================================== %>
+
     <div class="toc-wrapper">
       <%= image_tag "logo.png", class: 'logo' %>
+
       <% if language_tabs.any? %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
@@ -62,14 +62,13 @@ under the License.
           <% end %>
         </div>
       <% end %>
-      <% if current_page.data.search %>
-        <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
-        </div>
-        <ul class="search-results"></ul>
-      <% end %>
+
       <ul id="toc" class="toc-list-h1">
         <% toc_data(page_content).each do |h1| %>
+          <% if h1[:typ] == 'sep' %>
+            <div style="margin-bottom:2em;"></div>
+            <% next %>
+          <% end %>
           <li>
             <a href="#<%= h1[:id] %>" class="toc-h1 toc-link" data-title="<%= h1[:title] %>"><%= h1[:content] %></a>
             <% if h1[:children].length > 0 %>
@@ -84,6 +83,7 @@ under the License.
           </li>
         <% end %>
       </ul>
+
       <% if current_page.data.toc_footers %>
         <ul class="toc-footer">
           <% current_page.data.toc_footers.each do |footer| %>
@@ -91,12 +91,19 @@ under the License.
           <% end %>
         </ul>
       <% end %>
+
     </div>
+
+    <%# =========================================== %>
+
     <div class="page-wrapper">
+
       <div class="dark-box"></div>
+
       <div class="content">
         <%= page_content %>
       </div>
+
       <div class="dark-box">
         <% if language_tabs.any? %>
           <div class="lang-selector">
@@ -110,6 +117,10 @@ under the License.
           </div>
         <% end %>
       </div>
+
     </div>
+
+    <%# =========================================== %>
+
   </body>
 </html>
