--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,7 @@ under the License.
     <title><%= current_page.data.title || "API Documentation" %></title>
 
     <%= stylesheet_link_tag :screen, media: :screen %>
-    <%= javascript_include_tag  "all_nosearch" %>
+    <%= javascript_include_tag  "all" %>
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
