--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -70,30 +70,36 @@ $lang-select-active-text: $lang-select-text !default;
 $lang-select-pressed-bg:   $lang-select-active-bg   !default;
 $lang-select-pressed-text: $lang-select-active-text !default;
 
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // ASIDE
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
 $aside-notice-bg:  hsl(202, 100%, 90%) !default;
 $aside-warning-bg: hsl(  0, 100%, 90%) !default;
 $aside-success-bg: hsl(128, 100%, 90%) !default;
 
-
-////////////////////
+////////////////////////////////////////////////////////////////////////////////
+//
 // SIZES
-////////////////////
+//
+////////////////////////////////////////////////////////////////////////////////
 
-$nav-width: 230px !default; // width of the navbar
-$examples-width: 40% !default; // portion of the screen taken up by code examples
-$logo-margin: 0px !default; // margin below logo
-$main-padding: 28px !default; // padding to left and right of content & examples
-$nav-padding: 15px !default; // padding to left and right of navbar
-$nav-indent: 10px !default; // extra padding for ToC subitems
+$nav-width:      200px !default;
+$examples-width:   50% !default;
+
+$logo-margin:      0px !default;
+$nav-padding:     15px !default; // padding to left and right of navbar
+$nav-indent:      10px !default; // extra padding for ToC subitems
+
+$main-padding:    28px !default; // padding to left and right of content & examples
 $code-annotation-padding: 13px !default; // padding inside code annotations
+
 $h1-margin-bottom: 21px !default; // padding under the largest header tags
+
 $tablet-width: 930px !default; // min width before reverting to tablet size
 $phone-width: $tablet-width - $nav-width !default; // min width before reverting to mobile size
-
 
 ////////////////////////////////////////////////////////////////////////////////
 //
@@ -118,7 +124,7 @@ $phone-width: $tablet-width - $nav-width !default; // min width before reverting
 
 %code-font {
   font-family: "Source Code Pro", monospace;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
