--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -398,11 +398,12 @@ html, body {
   }
 
   code {
-    background-color: rgba(0, 0, 0, 0.08);
-	color: #333;
-    padding: 2px 4px;
+    background-color: hsl(0, 0%, 90%);
+    border: 1px solid hsl(0, 0%, 75%);
+    color: hsl(338, 50%, 50%);
+
+    padding: 1px 4px;
     border-radius: 4px;
-    @extend %break-words;
     @extend %code-font;
   }
 
@@ -410,6 +411,7 @@ html, body {
     background-color: transparent;
     padding: 0;
     font-size: 13px;
+    @extend %break-words;
   }
 
   aside {
