--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -474,7 +474,7 @@ html, body {
       font-size: 14px;
       font-weight: bold;
       line-height: 1.5;
-      margin-right: 1em;
+      X-margin-right: 1em;
   }
 
   .http-verb.http-get {
