--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -56,7 +56,7 @@ $code-annotation-text: $EXAMPLES_FG             !default;
 
 ////////////////////////////////////////////////////////////////////////////////
 //
-// LANG SELET
+// LANG SELECT
 //
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -87,7 +87,7 @@ $aside-success-bg: hsl(128, 100%, 90%) !default;
 ////////////////////////////////////////////////////////////////////////////////
 
 $nav-width:      200px !default;
-$examples-width:   50% !default;
+$examples-width:   40% !default;
 
 $logo-margin:      0px !default;
 $nav-padding:     15px !default; // padding to left and right of navbar
