added build date

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -94,6 +94,10 @@ under the License.
         </ul>
       <% end %>
 
+      <ul class="toc-footer">
+        <li>(Built <%= Date.today.strftime("%Y-%m-%d") %>)</li>
+      </ul>
+
     </div>
 
     <%# =========================================== %>
