--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -87,14 +87,14 @@ $aside-success-bg: hsl(128, 100%, 90%) !default;
 ////////////////////////////////////////////////////////////////////////////////
 
 $nav-width:      250px !default;
-$examples-width:   40% !default;
+$examples-width: 500px !default;
 
 $logo-margin:      0px !default;
 $nav-padding:     15px !default; // padding to left and right of navbar
 $nav-indent:      10px !default; // extra padding for ToC subitems
 
 $main-padding:    28px !default; // padding to left and right of content & examples
-$code-annotation-padding: 13px !default; // padding inside code annotations
+$code-annotation-padding: 4px !default; // padding inside code annotations
 
 $h1-margin-bottom: 21px !default; // padding under the largest header tags
 
