--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -252,6 +252,7 @@ html, body {
 // CONTENT STYLES
 //
 // This is all the stuff with the light background in the left half of the page
+//
 
 .content {
   // fixes webkit rendering bug for some: see #538
@@ -279,8 +280,7 @@ html, body {
     padding-left: $main-padding + 15px;
   }
 
-  // the div is the tocify hidden div for placeholding stuff
-  &>h1, &>h2, &>div {
+  &>h1, &>h2 {
     clear:both;
   }
 
@@ -494,43 +494,37 @@ html, body {
 //
 
 .content {
-  pre, blockquote {
+
+  blockquote, pre {
     background-color: $code-bg;
     color: #fff;
 
     margin: 0;
     width: $examples-width;
 
-    float:right;
-    clear:right;
+    float: right;
+    clear: right;
 
     box-sizing: border-box;
 
     @extend %right-col;
 
     &>p { margin: 0; }
-
-    a {
-      color: #fff;
-      text-decoration: none;
-      border-bottom: dashed 1px #ccc;
-    }
-  }
-
-  pre {
-    @extend %code-font;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    padding: 2em $main-padding;
   }
 
   blockquote {
     &>p {
       background-color: $code-annotation-bg;
-      padding: $code-annotation-padding 1em;
       color: $code-annotation-text;
+      padding: $code-annotation-padding 1em;
     }
   }
+
+  pre {
+    @extend %code-font;
+    padding: 2em $main-padding;
+  }
+
 }
 
 //
